metadata/unpackaged/objects/System__c.object
<CustomObject>
    <description>Used to maintain information regarding ION customer installed geophysical systems</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Systems</relationshipLabel>
        <relationshipName>Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>ION
Ascend
Sercel
Geo-X
Ominquest International
Seismic Instruments
Seistronix
Vibtech
WesternGeco
Other</description>
        <label>Brand</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>ION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ascend Geo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oyo Geospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sercel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sercel/Vibtech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Geco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless Seismic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channels__c</fullName>
        <label>Channels</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <picklist>
            <picklistValues>
                <fullName>Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TZ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Install_Purchase_Year__c</fullName>
        <label>Install/Purchase Year</label>
        <picklist>
            <picklistValues>
                <fullName>2008</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <picklist>
            <controllingField>Brand__c</controllingField>
            <picklistValues>
                <fullName>Scorpion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>428XL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ultra G5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sensor__c</fullName>
        <description>Analog
Digital
Mixed Mode</description>
        <label>Sensor</label>
        <picklist>
            <picklistValues>
                <fullName>Sensor 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sensor 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sensor 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cable Acquisition System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calbeless Acquisition System</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>System</label>
    <nameField>
        <displayFormat>SYS-{000000}</displayFormat>
        <label>System</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>